# ncnn_Android_MoveNet

multipose/: local.properties
multipose/app/src/main/jni/: CMakeLists.txt  nanodet.cpp
singlepose/: local.properties
singlepose/app/src/main/: AndroidManifest.xml
singlepose/app/src/main/assets/: movenet1.param
singlepose/app/src/main/java/com/tencent/ncnnbodypose/: MyCameraActivity.java  NcnnBodypose.java
singlepose/app/src/main/java/com/tencent/ncnnbodypose/camera2/: Camera2Helper.java  Camera2Listener.java
singlepose/app/src/main/java/com/tencent/ncnnbodypose/util/: ImageUtil.java
singlepose/app/src/main/jni/: CMakeLists.txt  nanodet.cpp  nanodet.h  nanodetncnn.cpp  ndkcamera.cpp  ndkcamera.h
singlepose/app/src/main/res/layout/: maincamera.xml
