project(ncnnbodypose)

cmake_minimum_required(VERSION 3.10)

set(OpenCV_DIR ${CMAKE_SOURCE_DIR}/OpenCV-android-sdk/sdk/native/jni)
find_package(OpenCV REQUIRED core imgproc)

set(ncnn_DIR ${CMAKE_SOURCE_DIR}/ncnn-20211208-android-vulkan/${ANDROID_ABI}/lib/cmake/ncnn)
find_package(ncnn REQUIRED)

add_library(ncnnbodypose SHARED nanodetncnn.cpp nanodet.cpp ndkcamera.cpp)

target_link_libraries(ncnnbodypose ncnn ${OpenCV_LIBS} camera2ndk mediandk)
